--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,7 +1,13 @@
 @import 'tailwindcss';
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 @theme {
-  --font-sans: Switzer, system-ui, sans-serif;
+  --font-sans: var(--font-gidole);
+  --font-serif: var(--font-league-spartan);
+
+  --font-league-spartan: "League Spartan", sans-serif;
+  --font-gidole: "Gidole", sans-serif;
 
   --radius-4xl: 2rem;
 
